--- a/InitialImageViewExample/Base.lproj/Main.storyboard
+++ b/InitialImageViewExample/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -38,6 +38,13 @@
                                     <constraint firstAttribute="height" constant="100" id="lkY-O8-ixD"/>
                                 </constraints>
                             </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BCx-UZ-qNk" customClass="InitialImageView" customModule="InitialImageViewExample" customModuleProvider="target">
+                                <rect key="frame" x="250" y="429" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="62y-07-LhQ"/>
+                                    <constraint firstAttribute="height" constant="100" id="tcU-QG-EUx"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
@@ -45,14 +52,17 @@
                             <constraint firstItem="Dvp-d7-0pB" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="P9k-mP-HGU"/>
                             <constraint firstItem="Dvp-d7-0pB" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="Yak-Yx-jvH"/>
                             <constraint firstItem="mmR-0N-Tn9" firstAttribute="top" secondItem="ReR-G0-37v" secondAttribute="bottom" constant="29" id="g0A-0Q-vUd"/>
+                            <constraint firstItem="BCx-UZ-qNk" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="lxc-3z-8w1"/>
                             <constraint firstItem="mmR-0N-Tn9" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="onO-4D-WXc"/>
                             <constraint firstItem="ReR-G0-37v" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="qHp-Sy-wHw"/>
+                            <constraint firstItem="BCx-UZ-qNk" firstAttribute="top" secondItem="mmR-0N-Tn9" secondAttribute="bottom" constant="26" id="rDc-uE-Bwt"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="imageView" destination="Dvp-d7-0pB" id="h8N-ga-jHE"/>
-                        <outlet property="secondImageView" destination="ReR-G0-37v" id="d5e-7N-04E"/>
-                        <outlet property="thirdImageView" destination="mmR-0N-Tn9" id="LEy-In-o9I"/>
+                        <outlet property="firstNameLastNameImageView" destination="BCx-UZ-qNk" id="G2J-T2-1eJ"/>
+                        <outlet property="initialImageView" destination="Dvp-d7-0pB" id="Fcc-Wr-SLP"/>
+                        <outlet property="initialWithFontImageView" destination="ReR-G0-37v" id="Nwd-uu-L1s"/>
+                        <outlet property="nameImageView" destination="mmR-0N-Tn9" id="SAx-vC-KST"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
